[project]
name = "mov"
version = "0.1.0"
description = "영화진흥위원회 영화순위 데이터 처리"
authors = [
    {name = "mangG907", email = "mang.gee@gmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[project.scripts]
mov-ping = 'mov.cli:ping'

[project.urls]
Homepage = "https://github.com/mangG907/movie"
Issues = "https://github.com/mangG907/movie/issues"
